<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- application -->
    <string name="app_name">SqliteDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- menu item title -->
    <string name="menu_add">Add</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_search">Search</string>
    
    <!-- context menu item title -->
    <string name="ctxMenu_edit">Edit</string>
    <string name="ctxMenu_delete">Delete</string>
    
    <!-- Begin Input.xml -->
	    <!-- hint -->
		    <string name="hint_password">Password</string>
		    <string name="hint_firstname">First Name</string>
		    <string name="hint_lastname">Last Name</string>
		    <string name="hint_phone">Phone</string>
		    <string name="hint_salary">Salary</string>
		    <string name="hint_departmentID">DepartmentID</string>	    
	    <!-- Button -->
		    <string name="btnOK">OK</string>
		    <string name="btnReset">Reset</string>
	 <!-- End Input.xml -->    


	 <!-- Begin login.xml -->
	 	<!-- label -->
		 	<string name="lblID">ID:</string>
		 	<string name="lblPassword">Password:</string>
	 	<!-- Button -->
		 	<string name="btnLogin">Login</string>
	 	<!-- link -->
		 	<string name="link_send_admins">Problem your account? Please send to Admins!</string>
	 <!-- End login.xml -->
	 
	 
	 <!-- Begin register.xml -->
	 	<!-- label -->
	 	<string name="lblMailTo">To:</string>
	 	<string name="lblSubject">Subject:</string>
	 	<string name="lblBody">Body:</string>	 	
	 	<!-- Button -->
	 	<string name="btnSend">Send now!</string>
	 	<!-- link -->
	 	<string name="link_login">Not problem? Login here!</string>
     <!-- Begin register.xml -->
     
     
	 <!-- style for button -->
     <style name="ButtonText">
	    <item name="android:layout_width">fill_parent</item>
	    <item name="android:layout_height">wrap_content</item>
	    <item name="android:textColor">#ffffff</item>
	    <item name="android:gravity">center</item>
	    <item name="android:layout_margin">3dp</item>
	    <item name="android:textSize">30dp</item>
	    <item name="android:textStyle">bold</item>
	    <item name="android:shadowColor">#000000</item>
	    <item name="android:shadowDx">1</item>
	    <item name="android:shadowDy">1</item>
	    <item name="android:shadowRadius">2</item>
	</style>
	
     <!-- Search.xml -->
     <string name="space"> - </string>
</resources>
